--- a/src/app/modules/admin/components/order-management/order-management.component.scss
+++ b/src/app/modules/admin/components/order-management/order-management.component.scss
@@ -9,9 +9,9 @@
 .example-container {
     display: flex;
      flex-direction: column;
-    //  min-width: 1000px;
-    margin-left: 40px;
-    margin-right: 40px;
+   
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 30px;
     
   }
@@ -28,17 +28,23 @@
     font-size: 14px;
      width:20%;
   }
-  
+ 
   .mat-table {
     overflow: auto;
+   
     // max-height: 500px;
     background-color:var(--toast-background);
     color:var(--toast-text);
+    border: solid 1px black;
   }
   .mat-header-cell{
     font-size: 18px;
     // color: black;
     justify-content: center;
+   height:20px;
+  // 
+  //  border-right: 1px solid black;
+   
   }
   .mat-cell{
     align-items: center;
@@ -46,22 +52,32 @@
     background-color:var(--toast-background);
     color:var(--toast-text);
    justify-content: center;
+   border-right: 1px solid black;
+  
   }
-  // .mat-header-cell.mat-sort-header-sorted {
-  //   color:black;
-  // }
+  .mat-header-cell.mat-sort-header-sorted {
+    color:black;
+  }
   #view-icon{
     color: green;
-    // align-items: end;
-    //  margin-left: 100px;
-    // position: relative;
+  
      
   }
- 
+ #icons{
+  display: inline-flex;
+  margin-left: 140px;
+  position: absolute;
+ }
+ #actionbtns{
+  position: absolute;
+  margin-left: -100px;
+ }
+
   .mat-header-row {
     // background-color: #4caeeb;
     background-color:var(--opbg);
     color:var(--toast-text);
+    
   }
 
   // .mat-header-cell.mat-column-orderId {
@@ -74,8 +90,216 @@
   body{
     background-color:var(--toast-background);
     color:var(--toast-text);
+    
+  
   }
   ::ng-deep .mat-dialog-container {
     background-color: var(--toast-background); // Use your custom color here
     color: var(--toast-text); // Use your custom text color here
+  }
+//   .mat-column-orderId{
+//     max-width: 200px;
+//     border-right: 1px solid currentColor;
+//     text-align: center;
+//     font-size: medium;
+//  }
+//   .mat-column-totalAmount{
+//     max-width: 90px;
+//     border-right: 1px solid currentColor;
+//     text-align: center;
+//     font-size: medium;
+//  }
+
+
+  
+  .custom-column-width-totalAmount {
+  min-width: 80px;
+  // border-right: 1px solid currentColor;
+    height: auto;
+  }
+  
+  .custom-column-width-orderId {
+  min-width: 200px;
+  // border-right: 1px solid currentColor;
+    height: auto;
+  }
+  .custom-column-width-userId {
+     min-width: 300px;
+    // border-right: 1px solid currentColor;
+    height: auto;
+  }
+  .custom-column-width-lastUpdateDtTm {
+     min-width: 130px;
+    // border-right: 1px solid currentColor;
+    height: auto;
+  }
+  .custom-column-width-orderSubmitDtTm {
+     min-width: 130px;
+    // border-right: 1px solid;
+    height: auto;
+  }
+  .custom-column-width-statusCd {
+     min-width: 130px;
+    // border-right: 1px solid currentColor;
+    height: auto;
+  }
+  .custom-column-width-mobileNumber {
+     min-width: 130px;
+    // border-right: 1px solid currentColor;
+    height: auto;
+  }
+  .custom-column-width-Actions {
+     min-width: 275px;
+    // border-right: 1px solid currentColor;
+    height: auto;
+  }
+  
+
+  
+  @media screen and (min-width:360px) and (max-width:1360px) {
+    .example-container {
+      display: flex;
+       flex-direction: column;
+     
+      margin-left: 10px;
+      margin-right: 10px;
+      margin-top: 30px;
+      
+    }
+    
+    .example-header {
+      min-height: 64px;
+      // padding: 8px 24px 0;
+      margin-left: 40px;
+      background-color:var(--toast-background);
+      color:var(--toast-text);
+    }
+    
+    .mat-form-field {
+      font-size: 14px;
+       width:20%;
+    }
+   
+    .mat-table {
+      overflow: auto;
+      width: auto;
+      // max-height: 500px;
+      background-color:var(--toast-background);
+      color:var(--toast-text);
+      border: solid 1px black;
+    }
+    .mat-header-cell{
+      font-size: 18px;
+      // color: black;
+      justify-content: center;
+    
+     
+    }
+    .mat-cell{
+      align-items: center;
+      font-size: 18px;
+      background-color:var(--toast-background);
+      color:var(--toast-text);
+     justify-content: center;
+   
+    
+    }
+    .mat-header-cell.mat-sort-header-sorted {
+      color:black;
+    }
+    #view-icon{
+      color: green;
+    
+       
+    }
+   #icons{
+    display: inline-flex;
+    margin-left: 140px;
+    position: absolute;
+   }
+   #actionbtns{
+    position: absolute;
+    margin-left: -100px;
+   }
+  
+    .mat-header-row {
+      // background-color: #4caeeb;
+      background-color:var(--opbg);
+      color:var(--toast-text);
+      
+    }
+  
+    // .mat-header-cell.mat-column-orderId {
+    //   width: 20px;
+    // }
+    // .view-icon{
+    //  justify-content: center;
+    // }
+  
+    body{
+      background-color:var(--toast-background);
+      color:var(--toast-text);
+      
+    
+    }
+    ::ng-deep .mat-dialog-container {
+      background-color: var(--toast-background); // Use your custom color here
+      color: var(--toast-text); // Use your custom text color here
+    }
+    .mat-column-orderId{
+      max-width: 200px;
+      // border-right: 1px solid currentColor;
+      text-align: center;
+      font-size: medium;
+   }
+  //   .mat-column-totalAmount{
+  //     max-width: 90px;
+  //     border-right: 1px solid currentColor;
+  //     text-align: center;
+  //     font-size: medium;
+  //  }
+  
+  
+    
+    .custom-column-width-totalAmount {
+    min-width: 80px;
+    // border-right: 1px solid currentColor;
+      height: auto;
+    }
+    
+    .custom-column-width-orderId {
+    min-width: 200px;
+    // border-right: 1px solid currentColor;
+      height: auto;
+    }
+    .custom-column-width-userId {
+       min-width: 300px;
+      // border-right: 1px solid currentColor;
+      height: auto;
+    }
+    .custom-column-width-lastUpdateDtTm {
+       min-width: 130px;
+      // border-right: 1px solid currentColor;
+      height: auto;
+    }
+    .custom-column-width-orderSubmitDtTm {
+       min-width: 130px;
+      // border-right: 1px solid;
+      height: auto;
+    }
+    .custom-column-width-statusCd {
+       min-width: 130px;
+      // border-right: 1px solid currentColor;
+      height: auto;
+    }
+    .custom-column-width-mobileNumber {
+       min-width: 130px;
+      // border-right: 1px solid currentColor;
+      height: auto;
+    }
+    .custom-column-width-Actions {
+       min-width: 275px;
+      // border-right: 1px solid currentColor;
+      height: auto;
+    }
   }
