--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -1,105 +1,129 @@
-
 <html>
-  <body>
+
+<body>
 
 
 
-<span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
-<h1 mat-dialog-title >Add New Product</h1>
-<div mat-dialog-content class="dialog-content">
-  <form [formGroup]="productForm">
-    <div>
-      <mat-form-field class="product-name" appearance="fill">
-        <mat-label [ngStyle]="getInputStyles()">Product Name</mat-label>
-        <input matInput formControlName="productName">
+  <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
+  <h1 mat-dialog-title>Add New Product</h1>
+  <div mat-dialog-content class="dialog-content">
+    <form [formGroup]="productForm">
+      <div>
+        <mat-form-field class="product-name" appearance="fill">
+          <mat-label [ngStyle]="getInputStyles()">Product Name</mat-label>
+          <input matInput formControlName="productName">
 
-        <div *ngIf="submitted && productForm.get('productName').invalid">
-          <!-- <div *ngIf="productForm.get('productName').errors.required"> Product Name is required.</div> -->
-        </div>
-      </mat-form-field>
-
-
-
-      <mat-form-field class="vendor-select" appearance="fill">
-        <mat-label [ngStyle]="getInputStyles()">Vendor Name</mat-label>
-        <mat-select formControlName="manufacturerId">
-          <mat-option *ngFor="let vendor of vendorData" [value]="vendor.manufacturerId" [ngStyle]="getInputStyles()">
-            {{vendor.manufacturerName}}
-          </mat-option>
-
-          <div *ngIf="submitted && productForm.get('manufacturerId').invalid">
-            <!-- <div *ngIf="productForm.get('manufacturerId').errors.required"> Select Vendor Name.</div> -->
+          <div *ngIf="submitted && productForm.get('productName').invalid">
+            <!-- <div *ngIf="productForm.get('productName').errors.required"> Product Name is required.</div> -->
           </div>
-        </mat-select>
-      </mat-form-field>
-
-
-      <mat-form-field class="search-tag_-list" appearance="fill" id="search_tag">
-        <mat-label [ngStyle]="getInputStyles()">Search Tags</mat-label>
-        <mat-chip-list #chipList aria-label="Searchtag selection">
-          <mat-chip *ngFor="let tag of searchTags" (removed)="removeTag(tag)">
-            {{tag}}
-            <button matChipRemove>
-              <mat-icon>cancel</mat-icon>
-            </button>
-          </mat-chip>
-          <input formControlName="searchTag" placeholder="Enter Tags..." [matChipInputFor]="chipList"
-            [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-            (matChipInputTokenEnd)="addTag($event)">
-        </mat-chip-list>
-
-        <div *ngIf="submitted && productForm.get('searchTag').invalid">
-          <div *ngIf="productForm.get('searchTag').errors.required" style="color: red;">SearchTag is required.</div>
-        </div>
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field class="product-description" appearance="fill">
-        <mat-label [ngStyle]="getInputStyles()">Product Description</mat-label>
-        <textarea formControlName="productDesc" matInput placeholder="Type Here..."></textarea>
-
-        <div *ngIf="submitted && productForm.get('productDesc').invalid">
-          <!-- <div *ngIf="productForm.get('productDesc').errors.required">ProductDes is required.</div> -->
-        </div>
-      </mat-form-field>
-
-
-
-
-      <div formArrayName="catalog" class="product-catalog">
-        <mat-form-field id="selectcatalog">
-
-          <mat-label [ngStyle]="getInputStyles()">Select Catalog</mat-label>
-          <mat-select multiple [(value)]="selectedCatalogVals">
-
-            <!-- <mat-select multiple [(value)]="selectedmanufactureId" formControlName="selectedCatalogs"> -->
-            <mat-option *ngFor="let item of Catalogsdata;let i=index" [value]="item" (click)="onSelectCatalogs(i)" [ngStyle]="getInputStyles()">
-              {{item.parent}}/{{item.catalogName}}
-
-            </mat-option>
-
-          </mat-select>
-
         </mat-form-field>
 
+
+
+        <mat-form-field class="vendor-select" appearance="fill">
+          <mat-label [ngStyle]="getInputStyles()">Vendor Name</mat-label>
+          <mat-select formControlName="manufacturerId">
+            <mat-option *ngFor="let vendor of vendorData" [value]="vendor.manufacturerId" [ngStyle]="getInputStyles()">
+              {{vendor.manufacturerName}}
+            </mat-option>
+
+            <div *ngIf="submitted && productForm.get('manufacturerId').invalid">
+              <!-- <div *ngIf="productForm.get('manufacturerId').errors.required"> Select Vendor Name.</div> -->
+            </div>
+          </mat-select>
+        </mat-form-field>
+
+
+        <mat-form-field class="search-tag_-list" appearance="fill" id="search_tag">
+          <mat-label [ngStyle]="getInputStyles()">Search Tags</mat-label>
+          <mat-chip-list #chipList aria-label="Searchtag selection">
+            <mat-chip *ngFor="let tag of searchTags" (removed)="removeTag(tag)">
+              {{tag}}
+              <button matChipRemove>
+                <mat-icon>cancel</mat-icon>
+              </button>
+            </mat-chip>
+            <input formControlName="searchTag" placeholder="Enter Tags..." [matChipInputFor]="chipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+              (matChipInputTokenEnd)="addTag($event)">
+          </mat-chip-list>
+
+          <div *ngIf="submitted && productForm.get('searchTag').invalid">
+            <div *ngIf="productForm.get('searchTag').errors.required" style="color: red;">SearchTag is required.</div>
+          </div>
+        </mat-form-field>
       </div>
-    </div>
-    <div>
+      <div>
+        <mat-form-field class="product-description" appearance="fill">
+          <mat-label [ngStyle]="getInputStyles()">Product Description</mat-label>
+          <textarea formControlName="productDesc" matInput placeholder="Type Here..."></textarea>
 
-      <button type="button" (click)="addNewCatalog()" id="addnewcatalogbtn" class="btn btn-outline-primary">Add New
-        Catalog</button>
-    </div>
+          <div *ngIf="submitted && productForm.get('productDesc').invalid">
+            <!-- <div *ngIf="productForm.get('productDesc').errors.required">ProductDes is required.</div> -->
+          </div>
+        </mat-form-field>
 
 
-    <div mat-dialog-action [align]="'center'">
-     
-      <button style="margin-left:10px" mat-raised-button color="primary"
-        (click)="addProduct(productForm)">Submit</button>
+
+
+        <div formArrayName="catalog" class="product-catalog">
+          <mat-form-field id="selectcatalog">
+
+            <mat-label [ngStyle]="getInputStyles()">Select Catalog</mat-label>
+            <mat-select multiple [(value)]="selectedCatalogVals">
+
+              <!-- <mat-select multiple [(value)]="selectedmanufactureId" formControlName="selectedCatalogs"> -->
+              <mat-option *ngFor="let item of Catalogsdata;let i=index" [value]="item" (click)="onSelectCatalogs(i)"
+                [ngStyle]="getInputStyles()">
+                {{item.parent}}/{{item.catalogName}}
+
+              </mat-option>
+
+            </mat-select>
+
+          </mat-form-field>
+
+        </div>
+      </div>
+
+      <div>
+        <div formArrayName="productOption" class="product-catalog">
+          <mat-form-field id="selectoption">
+
+            <mat-label [ngStyle]="getInputStyles()">Select OptionName</mat-label>
+            <mat-select multiple [(value)]="selectedOptionNames">
+
+              <!-- <mat-select multiple [(value)]="selectedmanufactureId" formControlName="selectedCatalogs"> -->
+              <mat-option *ngFor="let opName of optionsNameData;let i=index" [value]="opName"
+                (click)="onSelectOptionName(i)" [ngStyle]="getInputStyles()">
+                {{opName.optionName}}
+
+              </mat-option>
+
+            </mat-select>
+
+          </mat-form-field>
+
+        </div>
+      </div>
+
+<div>
+
+        <button type="button" (click)="addNewCatalog()" id="addnewcatalogbtn" class="btn btn-outline-primary">Add New
+          Catalog</button>
+      </div>
+
+
+      <div mat-dialog-action [align]="'center'">
+
+        <button style="margin-left:10px" mat-raised-button color="primary"
+          (click)="addProduct(productForm)">Submit</button>
         <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
-      <div *ngIf="submitted && !productForm.valid">All fields are required.</div>
-    </div>
+        <div *ngIf="submitted && !productForm.valid">All fields are required.</div>
+      </div>
 
-  </form>
-</div>
+    </form>
+  </div>
 </body>
+
 </html>
