--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
@@ -54,8 +54,8 @@ button {
 }
 
 #addnewcatalogbtn {
-    margin-left: 550px;
-    margin-top: -100px;
+    margin-left:80px;
+    margin-top: 30px;
     font-family: initial;
 }
 
@@ -95,6 +95,11 @@ body {
 ::ng-deep .mat-dialog-container {
     background-color: var(--toast-background); // Use your custom color here
     color: var(--toast-text); // Use your custom text color here
+}
+#selectoption{
+    margin-left: 300px;
+    margin-top: 40px;
+    font-family: initial;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
